# Obit-bhyve-python-package

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  USER_GUIDE.md  bhyve_mqtt_gateway.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  mosquitto.conf  mosquitto.prod.conf  nginx.conf  pyproject.toml  requirements.txt  setup.py  setup_env.py  setup_mqtt_broker.sh  start_dashboard.py  start_mqtt_dashboard.py  test_js_command_format.py
examples/: README_DASHBOARD.md  README_MQTT.md  mqtt_control_example.py  mqtt_dashboard.py  schedule_management.py  simple_dashboard.py  web_dashboard.py  websocket_control.py  working_dashboard.py
examples/templates/: dashboard.html  mqtt_dashboard.html
orbit_bhyve/: __init__.py  __main__.py  client.py  device.py  exceptions.py  mqtt_client.py
